--- a/SimpleDemo.Common/SimpleDemo.Common.csproj
+++ b/SimpleDemo.Common/SimpleDemo.Common.csproj
@@ -49,6 +49,10 @@
     <Compile Include="SerialPortHelp.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SimpleDemo.Device\SimpleDemo.Device.csproj">
+      <Project>{106A018D-D0BC-4299-B941-EFAFBF9C444D}</Project>
+      <Name>SimpleDemo.Device</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleDemo.Model\SimpleDemo.Model.csproj">
       <Project>{9CA61B5D-6C00-4CC5-8C19-23458706B990}</Project>
       <Name>SimpleDemo.Model</Name>
