--- a/SimpleDemo.UI/SimpleDemo.UI.csproj
+++ b/SimpleDemo.UI/SimpleDemo.UI.csproj
@@ -72,6 +72,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\SetDetectorViewModel.cs" />
     <Compile Include="ViewModels\Setting\SettingBasicViewModel.cs" />
     <Compile Include="ViewModels\Setting\SettingLineViewModel.cs" />
     <Compile Include="ViewModels\SettingManageViewModel.cs" />
@@ -80,6 +81,9 @@
     <Compile Include="ViewModels\TestViewModel.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SetDetectorView.xaml.cs">
+      <DependentUpon>SetDetectorView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Setting\SettingBasicView.xaml.cs">
       <DependentUpon>SettingBasicView.xaml</DependentUpon>
@@ -112,6 +116,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\MainView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SetDetectorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -173,9 +181,17 @@
       <Project>{5BF7DB2E-798B-425E-8BC1-2A9502CB1623}</Project>
       <Name>SimpleDemo.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SimpleDemo.Device\SimpleDemo.Device.csproj">
+      <Project>{106A018D-D0BC-4299-B941-EFAFBF9C444D}</Project>
+      <Name>SimpleDemo.Device</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleDemo.Model\SimpleDemo.Model.csproj">
       <Project>{9CA61B5D-6C00-4CC5-8C19-23458706B990}</Project>
       <Name>SimpleDemo.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XXLight\XXLight.csproj">
+      <Project>{9252993A-AE65-4442-9708-FF9D108D9945}</Project>
+      <Name>XXLight</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
