--- a/SimpleDemo.UI/App.config
+++ b/SimpleDemo.UI/App.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection,Microsoft.Practices.Unity.Configuration"/>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
+    <container>
+      <register type="SimpleDemo.Device.ILightFlowBase,SimpleDemo.Device" mapTo="YYLight.YYLight,YYLight">
+        <lifetime type="singleton"/>
+      </register>
+    </container>
+  </unity>
 </configuration>
