--- a/SimpleDemo.Model/SimpleDemo.Model.csproj
+++ b/SimpleDemo.Model/SimpleDemo.Model.csproj
@@ -43,12 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="DetectionType.cs" />
     <Compile Include="DeviceType.cs" />
     <Compile Include="LightDetectionMode.cs" />
     <Compile Include="PortIndex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SettingPortModel.cs" />
+    <Compile Include="SettingPortModel.cs">
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
